@@ -57,8 +57,9 @@ public:
 	CString GetDrive() const;
 	bool IsRemote() const;
 	bool IsSUBSTed() const;
-	virtual bool DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft, COLORREF textcol = CLR_NONE) const;
+	virtual bool DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft) const;
 	virtual CString GetText(int subitem) const;
+	virtual COLORREF GetItemTextColor() const;
 	int GetImage() const;
 
 private:
@@ -186,6 +187,9 @@ protected:
 };
 
 // $Log$
+// Revision 1.8  2004/11/12 00:47:42  assarbad
+// - Fixed the code for coloring of compressed/encrypted items. Now the coloring spans the full row!
+//
 // Revision 1.7  2004/11/08 00:46:26  assarbad
 // - Added feature to distinguish compressed and encrypted files/folders by color as in the Windows 2000/XP explorer.
 //   Same rules apply. (Green = encrypted / Blue = compressed)
