@@ -62,8 +62,9 @@ public:
 
 	virtual int CompareSibling(const CTreeListItem *tlib, int subitem) const =0;
 
-	virtual bool DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft, COLORREF textcol = CLR_NONE) const;
+	virtual bool DrawSubitem(int subitem, CDC *pdc, CRect rc, UINT state, int *width, int *focusLeft) const;
 	virtual CString GetText(int subitem) const;
+	virtual COLORREF GetItemTextColor() const;
 	virtual int GetImage() const;
 	virtual int Compare(const CSortingListItem *other, int subitem) const;
 	virtual CTreeListItem *GetTreeListChild(int i) const =0;
@@ -173,6 +174,9 @@ protected:
 
 
 // $Log$
+// Revision 1.6  2004/11/12 00:47:42  assarbad
+// - Fixed the code for coloring of compressed/encrypted items. Now the coloring spans the full row!
+//
 // Revision 1.5  2004/11/08 00:46:26  assarbad
 // - Added feature to distinguish compressed and encrypted files/folders by color as in the Windows 2000/XP explorer.
 //   Same rules apply. (Green = encrypted / Blue = compressed)
